	   call implementations
	 * fixed a bug processing arguments to in-object method calls in the
           background operator
	 * fixed a bug processing arguments to static method calls in the
           background operator
	 * implemented AbstractFunctionSignature C++ class for consistent
	   handling of type information for all function types

2010.01.23: David Nichols
	 * fixed line number reporting for type errors in initializer
	   expressions in public and private class member declarations

2010.01.22: David Nichols
	 * implement type enforcing at parse time for builtin constructors

2010.01.21: David Nichols
	 * infrastructure changes and new QoreClass APIs for setting return
	   type and parameter type information with builtin class methods;
	   added C++ functions: QoreClass::addMethodExtended() and
	   QoreClass::addMethodExtended2()
	 * API tuning for type information for builtin methods, added type
	   information for all File class methods
	 * new APIs for pre-defined type lists for type information (will be
	   required by the libsmoke-based qt4 module, for example)

2010.01.20: David Nichols
	 * added new library API: BuiltinFunctionList::add2() to allow for
	   setting the return type and parameter types and default parameter
	   values for builtin functions
	 * fixed symbol visibility in QoreTypeSafeReferenceHelper class
	 * infrastructure changes to accommodate consistent parameter handling
	   with user and builtin types
	 * builtin function and method return type and parameter type handling

2009.12.10: David Nichols
	 * fixed parse-time type checking of object member references
	 * fixed an issue with inialization order when checking types at parse
	   time

2009.12.09: David Nichols
	* initial implementation of object member initialization at
	  construction time; re-worked public and private member declarations
	  with types
	* functional implementation of object member initialization and type
	  declarations at object construction time
