@@ -454,7 +454,7 @@ static int checkMethod(const char *name, BCAList *bcal, QoreParseTypeInfo *retur
    return 0;
 }
 
-static inline void tryAddMethod(int mod, char *n, AbstractQoreNode *params, BCAList *bcal, QoreParseTypeInfo *returnTypeInfo, StatementBlock *b) {
+static inline void tryAddMethod(int mod, char *n, int n_sig_first_line, int n_sig_last_line, AbstractQoreNode *params, BCAList *bcal, QoreParseTypeInfo *returnTypeInfo, StatementBlock *b) {
    std::auto_ptr<NamedScope> name(new NamedScope(n));
 
    if (checkMethod(name->getIdentifier(), bcal, returnTypeInfo)) {
@@ -465,7 +465,7 @@ static inline void tryAddMethod(int mod, char *n, AbstractQoreNode *params, BCAL
       delete returnTypeInfo;
    }
    else {
-      QoreMethod *m = new QoreMethod(new UserFunction(strdup(name->getIdentifier()), b, params, returnTypeInfo, mod & OFM_SYNCED), mod & OFM_PRIVATE, mod & OFM_STATIC);
+      QoreMethod *m = new QoreMethod(new UserFunction(strdup(name->getIdentifier()), b, n_sig_first_line, n_sig_last_line, params, returnTypeInfo, mod & OFM_SYNCED), mod & OFM_PRIVATE, mod & OFM_STATIC);
       if (getRootNS()->addMethodToClass(name.get(), m, bcal)) {
 	 delete m;
 	 delete bcal;
@@ -1408,28 +1408,28 @@ method_definition:
         method_modifiers IDENTIFIER '(' myexp ')' base_constructor_list return_value block {
 	   //static int checkMethod(const char *name, BCAList *bcal, QoreParseTypeInfo *returnTypeInfo);
 	   checkMethod($2, $6, $7);
-	   $$ = new MethodNode(new UserFunction($2, $8, $4, $7, $1 & OFM_SYNCED), $1 & OFM_PRIVATE, $1 & OFM_STATIC, $6);
+	   $$ = new MethodNode(new UserFunction($2, $8, @4.first_line, @4.last_line, $4, $7, $1 & OFM_SYNCED), $1 & OFM_PRIVATE, $1 & OFM_STATIC, $6);
 	}
         | method_modifiers KW_IDENTIFIER_OPENPAREN myexp ')' base_constructor_list return_value block {
 	   checkMethod($2, $5, $6);
-	   $$ = new MethodNode(new UserFunction($2, $7, $3, $6, $1 & OFM_SYNCED), $1 & OFM_PRIVATE, $1 & OFM_STATIC, $5);
+	   $$ = new MethodNode(new UserFunction($2, $7, @3.first_line, @3.last_line, $3, $6, $1 & OFM_SYNCED), $1 & OFM_PRIVATE, $1 & OFM_STATIC, $5);
 	}
 	| IDENTIFIER '(' myexp ')' base_constructor_list return_value block {
 	   checkMethod($1, $5, $6);
-	   $$ = new MethodNode(new UserFunction($1, $7, $3, $6), false, false, $5);
+	   $$ = new MethodNode(new UserFunction($1, $7, @3.first_line, @3.last_line, $3, $6), false, false, $5);
 	}
 	| KW_IDENTIFIER_OPENPAREN myexp ')' base_constructor_list return_value block {
 	   checkMethod($1, $4, $5);
-	   $$ = new MethodNode(new UserFunction($1, $6, $2, $5), false, false, $4);
+	   $$ = new MethodNode(new UserFunction($1, $6, @2.first_line, @2.last_line, $2, $5), false, false, $4);
 	}
 	;
 
 object_outofline_function_def:
 	method_modifiers SCOPED_REF '(' myexp ')' base_constructor_list return_value block {
-	   tryAddMethod($1, $2, $4, $6, $7, $8);
+	   tryAddMethod($1, $2, @4.first_line, @4.last_line, $4, $6, $7, $8);
 	}
 	| SCOPED_REF '(' myexp ')' base_constructor_list return_value block {
-	   tryAddMethod(0, $1, $3, $5, $6, $7);
+	   tryAddMethod(0, $1, @3.first_line, @3.last_line, $3, $5, $6, $7);
 	}
 	;
 
@@ -1503,25 +1503,25 @@ return_value:
 
 sub_def:
         TOK_SUB IDENTIFIER '(' myexp ')' return_value block { 
-	   getProgram()->registerUserFunction(new UserFunction($2, $7, $4, $6)); 
+	   getProgram()->registerUserFunction(new UserFunction($2, $7, @4.first_line, @4.last_line, $4, $6)); 
 	   // make sure definition was legal
 	   if (checkParseOption(PO_NO_SUBROUTINE_DEFS))
 	      parse_error("subroutine \"%s\" defined (conflicts with parse option NO_SUBROUTINE_DEFS)", $2);
 	}
         | TOK_SYNCHRONIZED TOK_SUB IDENTIFIER '(' myexp ')' return_value block {
-	   getProgram()->registerUserFunction(new UserFunction($3, $8, $5, $7, true)); 
+	   getProgram()->registerUserFunction(new UserFunction($3, $8, @5.first_line, @5.last_line, $5, $7, true)); 
 	   // make sure definition was legal
 	   if (checkParseOption(PO_NO_SUBROUTINE_DEFS))
 	      parse_error("subroutine \"%s\" defined (conflicts with parse option NO_SUBROUTINE_DEFS)", $3);
 	}
 	| TOK_SUB KW_IDENTIFIER_OPENPAREN myexp ')' return_value block { 
-	   getProgram()->registerUserFunction(new UserFunction($2, $6, $3, $5)); 
+	   getProgram()->registerUserFunction(new UserFunction($2, $6, @3.first_line, @3.last_line, $3, $5)); 
 	   // make sure definition was legal
 	   if (checkParseOption(PO_NO_SUBROUTINE_DEFS))
 	      parse_error("subroutine \"%s\" defined (conflicts with parse option NO_SUBROUTINE_DEFS)", $2);
 	}
 	| TOK_SYNCHRONIZED TOK_SUB KW_IDENTIFIER_OPENPAREN myexp ')' return_value block {
-	   getProgram()->registerUserFunction(new UserFunction($3, $7, $4, $6, true)); 
+	   getProgram()->registerUserFunction(new UserFunction($3, $7, @4.first_line, @4.last_line, $4, $6, true)); 
 	   // make sure definition was legal
 	   if (checkParseOption(PO_NO_SUBROUTINE_DEFS))
 	      parse_error("subroutine \"%s\" defined (conflicts with parse option NO_SUBROUTINE_DEFS)", $3);
@@ -2238,7 +2238,7 @@ exp:    scalar
 	}
         | '(' ')' { QoreListNode *l = new QoreListNode(); l->setFinalized(); $$ = l; }
         | TOK_SUB '(' myexp ')' return_value block { 
-	   UserFunction *uf = new UserFunction(0, $6, $3, $5);
+	   UserFunction *uf = new UserFunction(0, $6, @3.first_line, @3.last_line, $3, $5);
 	   $$ = new QoreClosureParseNode(uf);
 /*
 	   // make sure definition was legal
@@ -2247,7 +2247,7 @@ exp:    scalar
 */
 	}
 	| TOK_SYNCHRONIZED TOK_SUB '(' myexp ')' return_value block {
-	   UserFunction *uf = new UserFunction(0, $7, $4, $6, true);
+	   UserFunction *uf = new UserFunction(0, $7, @4.first_line, @4.last_line, $4, $6, true);
 	   $$ = new QoreClosureParseNode(uf);
 /*
 	   // make sure definition was legal
