@@ -129,8 +129,7 @@ void showCallStack()
 }
 #endif
 
-void parse_error(const char *fmt, ...)
-{
+void parse_error(const char *fmt, ...) {
    printd(5, "parse_error(\"%s\", ...) called\n", fmt);
 
    QoreStringNode *desc = new QoreStringNode();
@@ -145,9 +144,9 @@ void parse_error(const char *fmt, ...)
    getProgram()->makeParseException(desc);
 }
 
-void parse_error(int sline, int eline, const char *fmt, ...)
-{
-   printd(5, "parse_error(sline, eline, \"%s\", ...) called\n", sline, eline, fmt);
+// FIXME: remove this function and use the version with const char *file as first arg
+void parse_error(int sline, int eline, const char *fmt, ...) {
+   printd(5, "parse_error(sline=%d, eline=%d, \"%s\", ...) called\n", sline, eline, fmt);
 
    QoreStringNode *desc = new QoreStringNode();
    while (true) {
@@ -159,6 +158,21 @@ void parse_error(int sline, int eline, const char *fmt, ...)
 	 break;
    }
    getProgram()->makeParseException(sline, eline, desc);
+}
+
+void parse_error(const char *file, int sline, int eline, const char *fmt, ...) {
+   printd(5, "parse_error(file=%s, sline=%d, eline=%d, \"%s\", ...) called\n", file, sline, eline, fmt);
+
+   QoreStringNode *desc = new QoreStringNode();
+   while (true) {
+      va_list args;
+      va_start(args, fmt);
+      int rc = desc->vsprintf(fmt, args);
+      va_end(args);
+      if (!rc)
+	 break;
+   }
+   getProgram()->makeParseException(sline, eline, file, desc);
 }
 
 void parseException(const char *err, const char *fmt, ...)
