@@ -7,6 +7,8 @@
            background operator
 	 * implemented AbstractFunctionSignature C++ class for consistent
 	   handling of type information for all function types
+	 * added source location information to user parameter lists for
+	   correct error reporting in parse exceptions
 
 2010.01.23: David Nichols
 	 * fixed line number reporting for type errors in initializer
